--- a/variants/bootstrap/app/views/shared/_navbar.html.erb.tt
+++ b/variants/bootstrap/app/views/shared/_navbar.html.erb.tt
@@ -9,8 +9,8 @@
         <li class="nav-item active">
         <%%= navbar_link_to("Home",
                           root_path,
-                          active_when: { controller: "home",
-                          class: 'nav-link'}) %>
+                          active_when: { controller: "home" },
+                          class: 'nav-link') %>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
