--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -80,11 +80,10 @@ end
 
 group :test do
   gem "capybara"<%= gemfile_requirement("capybara") %>
-  gem "chromedriver-helper"
   gem "launchy"
   gem "minitest-ci", ">= 3.3.0", require: false
   gem "mocha", ">= 1.4.0"
-  gem "selenium-webdriver"<%= gemfile_requirement("selenium-webdriver") %>
   gem "shoulda-context"
   gem "shoulda-matchers", ">= 3.0.1"
+  gem "webdrivers"<%= gemfile_requirement("webdrivers") %>
 end
