Avoid race conditions in webdrivers update
By explicitly downloading chromedriver before tests are run, rather than
having webdrivers do it in a lazy fashion during the tests.

--- a/circleci/config.yml.tt
+++ b/circleci/config.yml.tt
@@ -63,6 +63,7 @@ jobs:
       - run:
           name: Run tests
           command: |
+            bundle exec rake webdrivers:chromedriver:update
             bundle exec rake test test:system TESTOPTS="--ci-dir=./reports"
 
       - store_test_results:
