Upgrade Gemfile and app config for Rails 6
* Remove bin/update, it is no longer part of Rails, as of Rails 6
* Update base.html.erb to use webpacker

--- a/app/views/layouts/base.html.erb.tt
+++ b/app/views/layouts/base.html.erb.tt
@@ -3,6 +3,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>
+      <%%= strip_tags(yield(:title)) + " – " if content_for?(:title) %>
+      <%= app_const_base.titleize %>
+    </title>
+
+    <%%= csrf_meta_tags %>
+    <%%= csp_meta_tag %>
+
     <!-- <%= app_const_base.titleize %> <%%= Rails.application.config.version %> (<%%= l(Rails.application.config.version_time) %>) -->
 
     <%%# CSS should go closest to the top of the document as possible. %>
@@ -11,23 +19,14 @@
                             "data-turbolinks-track" => "reload") %>
 
     <%%# JavaScript must be in head for Turbolinks to work. %>
-    <%%= javascript_include_async_tag("application",
-                                     "data-turbolinks-track" => "reload") %>
+    <%%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
 
     <%%= yield(:head) %>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <%%# Specifies the default name of home screen bookmark in iOS 6+ %>
+    <%%# Specifies the default name of home screen bookmark in iOS %>
     <meta name="apple-mobile-web-app-title" content="<%= app_const_base.titleize %>">
-
-    <%%= csrf_meta_tags %>
-    <%%= csp_meta_tag %>
-
-    <title>
-      <%%= strip_tags(yield(:title)) + " – " if content_for?(:title) %>
-      <%= app_const_base.titleize %>
-    </title>
   </head>
   <body>
 
