--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -6,22 +6,24 @@ ruby "<%= RUBY_VERSION %>"
 gem "active_type", ">= 0.3.2"
 gem "autoprefixer-rails", ">= 5.0.0.1"
 gem "bcrypt"<%= gemfile_requirement("bcrypt") %>
-gem "bootsnap", ">= 1.2.0", require: false
+gem "bootsnap"<%= gemfile_requirement("bootsnap") %>, require: false
 gem "coffee-rails"<%= gemfile_requirement("coffee-rails") %>
 gem "dotenv-rails", ">= 2.0.0"
-gem "jquery-rails"<%= gemfile_requirement("jquery-rails") %>
-gem "mail", ">= 2.6.3"
 gem "marco-polo"
 gem "pg"<%= gemfile_requirement("pg") %>
 gem "pgcli-rails"
 <% unless apply_capistrano? -%>
-gem "puma"<%= gemfile_requirement("puma") %>
+gem "puma", "~> 4.1"
 <% end -%>
 gem "rack-canonical-host", "~> 0.2.3"
 gem "rails", "~> <%= Rails.version %>"
-gem "sass-rails"<%= gemfile_requirement("sass-rails") %>
+gem "redis"<%= gemfile_requirement("redis") %>
+gem "sass-rails", "~> 6.0"
 gem "sidekiq", ">= 4.2.0"
-gem "turbolinks"<%= gemfile_requirement("turbolinks") || ', ">= 2.5.2"' %>
+<% if gemfile_requirement("turbolinks") -%>
+gem "turbolinks"<%= gemfile_requirement("turbolinks") %>
+<% end -%>
+gem "webpacker"<%= gemfile_requirement("webpacker") %>
 
 group :production, :staging do
   gem "postmark-rails"
@@ -29,6 +31,10 @@ group :production, :staging do
   gem "unicorn"
   gem "unicorn-worker-killer"
 <% end -%>
+end
+
+group :development, :test do
+  gem "byebug"
 end
 
 group :development do
@@ -65,9 +71,11 @@ group :development do
   gem "rubocop", ">= 0.70.0", require: false
   gem "rubocop-performance", require: false
   gem "rubocop-rails", require: false
+<% if apply_capistrano? -%>
+  gem "sshkit", "~> 1.16", require: false
+<% end -%>
   gem "simplecov", require: false
   gem "spring"
-  gem "sshkit", "~> 1.16", require: false
 <% if gemfile_requirement("spring-watcher-listen") -%>
   gem "spring-watcher-listen"<%= gemfile_requirement("spring-watcher-listen") %>
 <% end -%>
@@ -83,7 +91,8 @@ group :test do
   gem "capybara"<%= gemfile_requirement("capybara") %>
   gem "launchy"
   gem "minitest-ci", ">= 3.3.0", require: false
+  gem "selenium-webdriver"
   gem "shoulda-context"
   gem "shoulda-matchers", ">= 3.0.1"
-  gem "webdrivers"<%= gemfile_requirement("webdrivers") %>
+  gem "webdrivers"
 end
