--- a/README.md.tt
+++ b/README.md.tt
@@ -57,8 +57,11 @@ Ensure the following environment variables are set in the deployment environment
 
 Optionally:
 
+* `HOSTNAME`
 * `RAILS_LOG_TO_STDOUT`
+* `RAILS_MAX_THREADS`
 * `RAILS_SERVE_STATIC_FILES`
+* `WEB_CONCURRENCY`
 <% end -%>
 
 [rbenv]:https://github.com/sstephenson/rbenv
