--- a/example.env.tt
+++ b/example.env.tt
@@ -9,3 +9,4 @@ SECRET_KEY_BASE=<%= SecureRandom.hex(64) %>
 REDIS_URL=redis://localhost:6379/<%= rand(16) %>
 SIDEKIQ_WEB_USERNAME=admin
 SIDEKIQ_WEB_PASSWORD=password
+PORT=3000
