Leave force_ssl off by default
Often times an app will be deployed without SSL initially before the
final DNS/hosting setup is finalized. Leave it off by default and allow
opt-in per deployment environment.

--- a/README.md.tt
+++ b/README.md.tt
@@ -53,6 +53,7 @@ Ensure the following environment variables are set in the deployment environment
 Optionally:
 
 * `HOSTNAME`
+* `RAILS_FORCE_SSL`
 * `RAILS_LOG_TO_STDOUT`
 * `RAILS_MAX_THREADS`
 * `RAILS_SERVE_STATIC_FILES`
