Add mock_redis gem so Redis is not needed in test
This allows e.g. CI to run without needing to set up a Redis instance.

--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -65,6 +65,7 @@ group :test do
   gem "capybara"<%= gemfile_requirement("capybara") %>
   gem "launchy"
   gem "minitest-ci", ">= 3.3.0", require: false
+  gem "mock_redis"
   gem "selenium-webdriver"
   gem "shoulda-context"
   gem "shoulda-matchers", ">= 3.0.1"
