Explicitly set password for postgres in CircleCI
This fixes an error reported by the latest postgres docker image:

```
Error: Database is uninitialized and superuser password is not specified.
       You must specify POSTGRES_PASSWORD for the superuser. Use
       "-e POSTGRES_PASSWORD=password" to set it in "docker run".

       You may also use POSTGRES_HOST_AUTH_METHOD=trust to allow all connections
       without a password. This is *not* recommended. See PostgreSQL
       documentation about "trust":
       https://www.postgresql.org/docs/current/auth-trust.html
```

--- a/circleci/config.yml.tt
+++ b/circleci/config.yml.tt
@@ -10,11 +10,12 @@ jobs:
         environment:
           PGHOST: 127.0.0.1
           PGUSER: postgres
+          PGPASS: postgres
           RAILS_ENV: test
       - image: circleci/postgres:10.5-alpine
         environment:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: ""
+          POSTGRES_PASSWORD: postgres
 
     working_directory: ~/repo
 
