--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -31,8 +31,8 @@ group :development, :test do
 end
 
 group :development do
+  gem "amazing_print"
   gem "annotate", ">= 2.5.0"
-  gem "awesome_print"
   gem "better_errors"
   gem "binding_of_caller"
   gem "brakeman", require: false
