bundle check before install

--- a/circleci/config.yml.tt
+++ b/circleci/config.yml.tt
@@ -30,8 +30,7 @@ commands:
             bundle config --local deployment true
             bundle config --local path vendor/bundle
             bundle config --local without development:production
-            bundle install --jobs=4 --retry=3
-            bundle clean
+            bundle check || (bundle install --jobs=4 --retry=3 && bundle clean)
       - save_cache:
           paths:
             - ./vendor/bundle
