--- a/rubocop.yml.tt
+++ b/rubocop.yml.tt
@@ -22,6 +22,9 @@ AllCops:
     - Guardfile
     - Rakefile
 
+Layout/EmptyLinesAroundAttributeAccessor:
+  Enabled: true
+
 Layout/HashAlignment:
   EnforcedColonStyle:
     - table
@@ -35,6 +38,18 @@ Layout/LineLength:
 
 Layout/SpaceAroundEqualsInParameterDefault:
   EnforcedStyle: no_space
+
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+
+Lint/DeprecatedOpenSSLConstant:
+  Enabled: true
+
+Lint/RaiseException:
+  Enabled: true
+
+Lint/StructNewOverride:
+  Enabled: true
 
 Metrics/AbcSize:
   Max: 20
@@ -93,6 +108,9 @@ Style/DoubleNegation:
 Style/EmptyMethod:
   Enabled: false
 
+Style/ExponentialNotation:
+  Enabled: true
+
 Style/FrozenStringLiteralComment:
   Enabled: false
 
@@ -110,6 +128,9 @@ Style/HashTransformValues:
 
 Style/NumericPredicate:
   Enabled: false
+
+Style/SlicingWithRange:
+  Enabled: true
 
 Style/StringLiterals:
   EnforcedStyle: double_quotes
