Rename master branch to "main"

--- a/circleci/config.yml.tt
+++ b/circleci/config.yml.tt
@@ -134,8 +134,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
-                - development
+                - main
     jobs:
       - static_analysis
       - test
