--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -3,20 +3,20 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby "<%= RUBY_VERSION %>"
 
-gem "active_type", ">= 0.3.2"
-gem "autoprefixer-rails", ">= 5.0.0.1"
+gem "active_type"
+gem "autoprefixer-rails"
 gem "bcrypt"<%= gemfile_requirement("bcrypt") %>
 gem "bootsnap"<%= gemfile_requirement("bootsnap") %>, require: false
 gem "coffee-rails"<%= gemfile_requirement("coffee-rails") %>
-gem "dotenv-rails", ">= 2.0.0"
+gem "dotenv-rails"
 gem "pg"<%= gemfile_requirement("pg") %>
 gem "pgcli-rails"
-gem "puma", "~> 4.1"
+gem "puma"<%= gemfile_requirement("puma") %>
 gem "rack-canonical-host", "~> 1.0"
-gem "rails", "~> <%= Rails.version %>"
+gem "rails", "~> <%= Rails.version[/\d+\.\d+\.\d+/] %>"
 gem "redis"<%= gemfile_requirement("redis") %>
-gem "sass-rails", "~> 6.0"
-gem "sidekiq", ">= 4.2.0"
+gem "sass-rails"
+gem "sidekiq"
 <% if gemfile_requirement("turbolinks") -%>
 gem "turbolinks"<%= gemfile_requirement("turbolinks") %>
 <% end -%>
@@ -28,10 +28,10 @@ end
 
 group :development do
   gem "amazing_print"
-  gem "annotate", ">= 2.5.0"
+  gem "annotate"
   gem "better_errors"
   gem "binding_of_caller"
-  gem "guard", ">= 2.2.2", require: false
+  gem "guard", require: false
   gem "guard-livereload", require: false
   gem "guard-minitest", require: false
   gem "letter_opener"
@@ -43,17 +43,14 @@ group :development do
 <% end -%>
   gem "terminal-notifier", require: false
   gem "terminal-notifier-guard", require: false
-<% unless gemfile_requirement("puma") -%>
-  gem "thin", require: false
-<% end -%>
 end
 
 group :development, :test do
   gem "brakeman", require: false
-  gem "bundler-audit", ">= 0.5.0", require: false
+  gem "bundler-audit", require: false
   gem "byebug"
-  gem "overcommit", ">= 0.37.0", require: false
-  gem "rubocop", ">= 0.85.0", require: false
+  gem "overcommit", require: false
+  gem "rubocop", require: false
   gem "rubocop-minitest", require: false
   gem "rubocop-performance", require: false
   gem "rubocop-rails", require: false
@@ -62,10 +59,10 @@ end
 group :test do
   gem "capybara"<%= gemfile_requirement("capybara") %>
   gem "launchy"
-  gem "minitest-ci", ">= 3.3.0", require: false
+  gem "minitest-ci", require: false
   gem "mock_redis"
   gem "selenium-webdriver"
   gem "shoulda-context"
-  gem "shoulda-matchers", ">= 3.0.1"
+  gem "shoulda-matchers"
   gem "webdrivers"
 end
