Make some env vars optional in production
If SIDEKIQ_WEB_PASSWORD and SIDEKIQ_WEB_USERNAME are not specified, then
simply don't allow access to the `/sidekiq` dashboard.

--- a/config/initializers/sidekiq.rb.tt
+++ b/config/initializers/sidekiq.rb.tt
@@ -1,10 +1,12 @@
 require "sidekiq/web"
 
-sidekiq_username = ENV.fetch("SIDEKIQ_WEB_USERNAME")
-sidekiq_password = ENV.fetch("SIDEKIQ_WEB_PASSWORD")
+sidekiq_username = ENV["SIDEKIQ_WEB_USERNAME"]
+sidekiq_password = ENV["SIDEKIQ_WEB_PASSWORD"]
 
 Sidekiq::Web.app_url = "/"
 Sidekiq::Web.use(Rack::Auth::Basic, "Application") do |username, password|
-  username == sidekiq_username &&
-    ActiveSupport::SecurityUtils.secure_compare(password, sidekiq_password)
+  if sidekiq_username.present? && sidekiq_password.present?
+    ActiveSupport::SecurityUtils.secure_compare(username, sidekiq_username) &
+      ActiveSupport::SecurityUtils.secure_compare(password, sidekiq_password)
+  end
 end
