Use dotenv for local development only
Configuring the app via a `.env` file is problematic because it affects
all environments, including test. The test environment should work
regardless of local configuration.

This commit more narrowly focuses the usage of dotenv by recommending a
`.env.development` file be used as opposed to `.env`. This limits the
effects to just the local development environment.

Also, there is no reason to load the dotenv gem in production.

--- a/example.env.tt
+++ b/example.env.tt
@@ -1,12 +1,8 @@
-# Copy this file into a new file called ".env" in the root of the project.
-# The dotenv gem will load the contents of .env into the environment when
-# Rails starts. Access values like this: ENV["RAILS_SECRET_KEY_BASE"]
-#
-# The purpose of this file is to keep secrets out of source control.
-# For more information, see: https://github.com/bkeepers/dotenv
+# These environment variables are needed to run the app locally.
+# Copy these into a file named .env.development to have them loaded automatically.
 
-SECRET_KEY_BASE=<%= SecureRandom.hex(64) %>
-REDIS_URL=redis://localhost:6379/<%= rand(16) %>
-SIDEKIQ_WEB_USERNAME=admin
-SIDEKIQ_WEB_PASSWORD=password
 PORT=3000
+REDIS_URL=redis://localhost:6379/<%= rand(16) %>
+SECRET_KEY_BASE=<%= SecureRandom.hex(64) %>
+SIDEKIQ_WEB_PASSWORD=password
+SIDEKIQ_WEB_USERNAME=admin
