Switch to "yarn start" (using foreman) to run app

--- a/README.md.tt
+++ b/README.md.tt
@@ -34,10 +34,12 @@ Run the `bin/setup` script. This script will:
 
 1. Run `bin/rake test` to make sure everything works.
 2. Run `bin/rake test:system` to run system (capybara) tests.
-3. Start the app with `heroku local -f Procfile.dev` or run these processes individually:
+3. Start the app with `yarn start` or run these processes individually:
    - Rails: `bin/rails s -b 0.0.0.0`
    - Webpack: `bin/webpack-dev-server`
    - Sidekiq: `bin/sidekiq -C config/sidekiq.yml`
+
+Access the app at <http://localhost:3000/>.
 
 ## Deployment
 
