--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -7,14 +7,18 @@ gem "active_type"
 gem "autoprefixer-rails"
 gem "bcrypt"<%= gemfile_requirement("bcrypt") %>
 gem "bootsnap"<%= gemfile_requirement("bootsnap") %>, require: false
+<% if sprockets? -%>
 gem "coffee-rails"<%= gemfile_requirement("coffee-rails") %>
+<% end -%>
 gem "pg"<%= gemfile_requirement("pg") %>
 gem "pgcli-rails"
 gem "puma"<%= gemfile_requirement("puma") %>
 gem "rack-canonical-host", "~> 1.0"
 gem "rails", "~> <%= Rails.version[/\d+\.\d+\.\d+/] %>"
 gem "redis"<%= gemfile_requirement("redis") %>
+<% if sprockets? -%>
 gem "sass-rails"
+<% end -%>
 gem "sidekiq"
 <% if gemfile_requirement("turbolinks") -%>
 gem "turbolinks"<%= gemfile_requirement("turbolinks") %>
@@ -31,11 +35,9 @@ group :development do
   gem "better_errors"
   gem "binding_of_caller"
   gem "guard", require: false
-  gem "guard-livereload", require: false
   gem "guard-minitest", require: false
   gem "letter_opener"
   gem "listen"<%= gemfile_requirement("listen") %>
-  gem "rack-livereload"
   gem "spring"
 <% if gemfile_requirement("spring-watcher-listen") -%>
   gem "spring-watcher-listen"<%= gemfile_requirement("spring-watcher-listen") %>
