--- a/app/views/layouts/base.html.erb.tt
+++ b/app/views/layouts/base.html.erb.tt
@@ -13,8 +13,10 @@
 
     <!-- <%= app_const_base.titleize %> <%%= Rails.application.config.version %> (<%%= l(Rails.application.config.version_time) %>) -->
 
+    <% if sprockets? -%>
     <%%# CSS should go closest to the top of the document as possible. %>
     <%%= stylesheet_link_tag("application", media: "all", "data-turbolinks-track" => "reload") %>
+    <% end -%>
 
     <%%# JavaScript must be in head for Turbolinks to work. %>
     <%%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
