--- a/circleci/config.yml.tt
+++ b/circleci/config.yml.tt
@@ -13,7 +13,7 @@ executors:
           PGPASS: postgres
           RAILS_ENV: test
           HEADLESS_CHROME: "1"
-      - image: circleci/postgres:12-alpine
+      - image: circleci/postgres:13-ram
         environment:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
