--- a/app/views/layouts/base.html.erb.tt
+++ b/app/views/layouts/base.html.erb.tt
@@ -13,9 +13,11 @@
 
     <!-- <%= app_const_base.titleize %> <%%= Rails.application.config.version %> (<%%= l(Rails.application.config.version_time) %>) -->
 
-<% if sprockets? -%>
     <%%# CSS should go closest to the top of the document as possible. %>
-    <%%= stylesheet_link_tag("application", media: "all", "data-turbolinks-track" => "reload") %>
+<% if sprockets? -%>
+    <%%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
+<% else -%>
+    <%%= stylesheet_pack_tag "application", "data-turbolinks-track": "reload" %>
 <% end -%>
 
     <%%# JavaScript must be in head for Turbolinks to work. %>
