--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,6 +1,6 @@
-@use "~stylesheets/mixins/typography";
+@use "./mixins/typography";
 
-@import "~stylesheets/colors";
+@import "./colors";
 
 body {
   @include typography.body;
