--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -4,28 +4,20 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby "<%= RUBY_VERSION %>"
 
 gem "active_type"
-<% if sprockets? -%>
-gem "autoprefixer-rails"
-<% end -%>
 gem "bcrypt"<%= gemfile_requirement("bcrypt") %>
-gem "bootsnap"<%= gemfile_requirement("bootsnap") %>, require: false
-<% if sprockets? -%>
-gem "coffee-rails"<%= gemfile_requirement("coffee-rails") %>
-<% end -%>
+gem "bootsnap", require: false
+gem "cssbundling-rails"
+gem "jsbundling-rails"
 gem "pg"<%= gemfile_requirement("pg") %>
 gem "pgcli-rails"
 gem "puma"<%= gemfile_requirement("puma") %>
 gem "rack-canonical-host"
 gem "rails", "~> <%= Rails.version[/\d+\.\d+\.\d+/] %>"
 gem "redis"<%= gemfile_requirement("redis") %>
-<% if sprockets? -%>
-gem "sass-rails"
-<% end -%>
 gem "sidekiq"
-<% if gemfile_requirement("turbolinks") -%>
-gem "turbolinks"<%= gemfile_requirement("turbolinks") %>
-<% end -%>
-gem "webpacker"
+gem "sprockets-rails"
+gem "stimulus-rails"
+gem "turbo-rails"
 
 group :production do
   gem "postmark-rails"
@@ -35,7 +27,6 @@ group :development do
   gem "amazing_print"
   gem "annotate"
   gem "letter_opener"
-  gem "listen"<%= gemfile_requirement("listen") %>
   gem "web-console"<%= gemfile_requirement("web-console") %>
 end
 
