--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -7,6 +7,7 @@ gem "active_type"
 <%= gemfile_entry "bcrypt", force: true -%>
 <%= gemfile_entry "bootsnap" -%>
 <%= gemfile_entry "cssbundling-rails" -%>
+<%= gemfile_entry "importmap-rails" -%>
 <%= gemfile_entry "jsbundling-rails" -%>
 <%= gemfile_entry "pg" -%>
 gem "pgcli-rails"
