--- a/app/views/layouts/base.html.erb.tt
+++ b/app/views/layouts/base.html.erb.tt
@@ -14,7 +14,11 @@
     <!-- <%= app_const_base.titleize %> <%%= Rails.application.config.version %> (<%%= l(Rails.application.config.version_time) %>) -->
 
     <%%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+<% if gemfile_entry("importmap-rails") %>
+    <%%= javascript_importmap_tags %>
+<% else %>
     <%%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+<% end %>
 
     <%%= yield(:head) %>
 
